	  will receive its input from stdin (/dev/console).  This works great but
	  cannot be shared between different windows.  Chaos will ensue if you
	  try to support multiple NxConsole windows without CONFIG_NXCONSOLE_NXKBDIN
	* graphics/nxmu/nx_kbdin.c:  Fix pointer argument.  This is a error
	  introduced in changes leading up to the 6.18 release.  This error will
	  cause crashes or perhaps simply not work when you try to handle window
	  keyboard data in multi-user mode.
	* graphics/nxconsole/nxcon_kdbind.c:  Fixed unmatched sem_wait and sem_post.
	  Fix some conditional compilation that included a few too many lines of code.
	* drivers/input/stmpe11_tsc.c and stmpe11.h:  Add a timeout to catch missed
	  pen up events.  Now the STM3240G-EVAL touchscreen works very smoothly.
	* configs/stm3240g-eval/nxwm/defconfig: Enable support for NxConsole keyboard
	  input. Increasing spacing of icons.
	* configs/stm3240g-eval/nxwm/defconfig: Use a larger font for the calculator.
	* include/nuttx/lcd/ssd1289.h, drivers/lcd/ssd1289.c and .h:  Generic LCD
	  driver for LCDs based on the Solomon Systech SSD1289 LCD driver.  This
	  of this as a template for an LCD driver that will have to be cusomized
	  for your particular LCD hardware.
	* configs/stm32f4discovery/src/up_extmem.c and up_ssd1289.c:  Add support to
	  STM32F4Discovery for than an external, SSD1289-based LCD.
	* configs/stm32f4discovery/nxlines:  Add an STM32F4Discovery configuration
	  to thest the SSD1289-based LCD.
	* configs/stm3240g-eval/src: Add USB GPIO initialization logic needed
	  in board-specific boot logic.
	* configs/stm32f4discovery/src: Add USB GPIO initialization logic needed
	  in board-specific boot logic.
	* drivers/usbdev/pl2303.c and cdcacm.c:  Fix the request size used for sending
	  packets.  It was not using the maximum request size, but instead the previous
	  request size.  As a result, packets get smaller, and smaller, and ...  This
	  is an important USB serial fix.